--- a/simlane/templates/account/password_reset_from_key.html
+++ b/simlane/templates/account/password_reset_from_key.html
@@ -9,7 +9,7 @@
   {% else %}
     {% trans "Change Password" as heading %}
   {% endif %}
-  {% #container heading=heading %}
+  <c-container :heading="heading">
   {% if token_fail %}
     {% url 'account_reset_password' as passwd_reset_url %}
     <div>
@@ -19,9 +19,9 @@
   {% endif %}
   {% trans "Change Password" as button_text %}
   {% url "account_reset_password_from_key" as action_url %}
-  {% #form form=form url=action_url button_text=button_text %}
+  <c-form :form="form" :url="action_url" :button_text="button_text">
   {% csrf_token %}
   {{ redirect_field }}
-  {% /form %}
-  {% /container %}
+  </c-form>
+  </c-container>
 {% endblock content %}
