--- a/simlane/templates/account/password_set.html
+++ b/simlane/templates/account/password_set.html
@@ -6,11 +6,11 @@
 
 {% block content %}
   {% trans "Set Password" as heading %}
-  {% #container heading=heading %}
+  <c-container :heading="heading">
   {% url 'account_set_password' as action_url %}
-  {% #form form=form url=action_url button_text=heading %}
+  <c-form :form="form" :url="action_url" :button_text="heading">
   {% csrf_token %}
   {{ redirect_field }}
-  {% /form %}
-  {% /container %}
+  </c-form>
+  </c-container>
 {% endblock content %}
