--- a/simlane/templates/allauth/elements/field.html
+++ b/simlane/templates/allauth/elements/field.html
@@ -1,6 +1,6 @@
 {% load allauth %}
-{% load crispy_forms_tags %}
 
+{% comment %} {% load crispy_forms_tags %} {% endcomment %}
 {% if attrs.type == "textarea" %}
   <div class="row mb-3">
     <div class="col-sm-10">
