--- a/simlane/templates/account/password_reset_from_key_done.html
+++ b/simlane/templates/account/password_reset_from_key_done.html
@@ -6,6 +6,6 @@
 {% block content %}
   {% trans "Change Password" as heading %}
   {% trans "Your password is now changed." as subheading %}
-  {% #container heading=heading subheading=subheading %}
-  {% /container %}
+  <c-container :heading="heading" :subheading="subheading">
+  </c-container>
 {% endblock content %}
