--- a/simlane/templates/allauth/elements/alert.html
+++ b/simlane/templates/allauth/elements/alert.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load allauth %}
 
-<div class="bg-red-50 border border-red-200 text-red-800 px-4 py-3 rounded-md">
+<div class="bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-800/20 text-red-800 dark:text-red-300 px-4 py-3 rounded-md">
   {% slot message %}
 {% endslot %}
 </div>
