--- a/simlane/templates/allauth/elements/badge.html
+++ b/simlane/templates/allauth/elements/badge.html
@@ -1,6 +1,6 @@
 {% load allauth %}
 
-<span class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium {% if 'success' in attrs.tags %}bg-green-100 text-green-800{% endif %} {% if 'warning' in attrs.tags %}bg-orange-100 text-orange-800{% endif %} {% if 'secondary' in attrs.tags %}bg-gray-100 text-gray-800{% endif %} {% if 'danger' in attrs.tags %}bg-red-100 text-red-800{% endif %} {% if 'primary' in attrs.tags %}bg-blue-100 text-blue-800{% endif %}">
+<span class="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium {% if 'success' in attrs.tags %}bg-green-100 dark:bg-green-900/20 text-green-800 dark:text-green-300{% endif %} {% if 'warning' in attrs.tags %}bg-orange-100 dark:bg-orange-900/20 text-orange-800 dark:text-orange-300{% endif %} {% if 'secondary' in attrs.tags %}bg-gray-100 dark:bg-gray-900/20 text-gray-800 dark:text-gray-300{% endif %} {% if 'danger' in attrs.tags %}bg-red-100 dark:bg-red-900/20 text-red-800 dark:text-red-300{% endif %} {% if 'primary' in attrs.tags %}bg-blue-100 dark:bg-blue-900/20 text-blue-800 dark:text-blue-300{% endif %}">
   {% slot %}
 {% endslot %}
 </span>
