--- a/simlane/templates/allauth/elements/button.html
+++ b/simlane/templates/allauth/elements/button.html
@@ -6,13 +6,13 @@
                       {% if attrs.id %}id="{{ attrs.id }}"{% endif %}
                       {% if attrs.name %}name="{{ attrs.name }}"{% endif %}
                       {% if attrs.type %}type="{{ attrs.type }}"{% endif %}
-                                              class="inline-flex items-center px-4 py-2 font-medium rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2
-{% if 'success' in attrs.tags %}bg-green-600 hover:bg-green-700 text-white
-{% elif 'warning' in attrs.tags %}bg-orange-600 hover:bg-orange-700 text-white
-{% elif 'secondary' in attrs.tags %}bg-gray-600 hover:bg-gray-700 text-white
-{% elif 'danger' in attrs.tags %}bg-red-600 hover:bg-red-700 text-white
-{% elif 'primary' in attrs.tags %}bg-blue-600 hover:bg-blue-700 text-white
-{% else %}bg-blue-600 hover:bg-blue-700 text-white
+                                              class="inline-flex items-center px-4 py-2 font-medium rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-50 dark:focus:ring-offset-gray-900
+{% if 'success' in attrs.tags %}bg-green-600 hover:bg-green-700 dark:bg-green-500 dark:hover:bg-green-600 text-white
+{% elif 'warning' in attrs.tags %}bg-orange-600 hover:bg-orange-700 dark:bg-orange-500 dark:hover:bg-orange-600 text-white
+{% elif 'secondary' in attrs.tags %}bg-gray-600 hover:bg-gray-700 dark:bg-gray-500 dark:hover:bg-gray-600 text-white
+{% elif 'danger' in attrs.tags %}bg-red-600 hover:bg-red-700 dark:bg-red-500 dark:hover:bg-red-600 text-white
+{% elif 'primary' in attrs.tags %}bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white
+{% else %}bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white
 {% endif %}"
 >
   {% slot %}
