--- a/simlane/templates/allauth/elements/fields.html
+++ b/simlane/templates/allauth/elements/fields.html
@@ -1,3 +1,2 @@
-{% load crispy_forms_tags %}
-
-{{ attrs.form|crispy }}
+{% comment %} {% load crispy_forms_tags %} {% endcomment %}
+{{ attrs.form }}
