--- a/simlane/templates/socialaccount/snippets/login.html
+++ b/simlane/templates/socialaccount/snippets/login.html
@@ -5,8 +5,8 @@
 {% get_providers as socialaccount_providers %}
 {% if socialaccount_providers %}
   {% if not SOCIALACCOUNT_ONLY %}
-    <div class="border-t border-gray-200 my-6"></div>
-    <h2 class="my-3 text-sm">{% translate "Or use a third-party" %}</h2>
+    <div class="border-t border-gray-200 dark:border-gray-600 my-6"></div>
+    <h2 class="my-3 text-sm text-gray-700 dark:text-gray-300">{% translate "Or use a third-party" %}</h2>
   {% endif %}
   {% include "socialaccount/snippets/provider_list.html" with process="login" %}
   {% include "socialaccount/snippets/login_extra.html" %}
