--- a/simlane/templates/teams/team_planning_dashboard.html
+++ b/simlane/templates/teams/team_planning_dashboard.html
@@ -28,7 +28,7 @@
                     <svg class="w-3 h-3 text-gray-400 mx-1" fill="none" stroke="currentColor" viewBox="0 0 6 10">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
                     </svg>
-                    <a href="{% url 'teams:event_signup_detail' allocation.event_signup.pk %}" class="ml-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ml-2">
+                    <a href="{% url 'teams:event_signup_detail' allocation.club_event.club.slug allocation.event_signup.pk %}" class="ml-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ml-2">
                         {{ allocation.event_signup.title }}
                     </a>
                 </div>
