--- a/simlane/templates/teams/stint_plan_partial.html
+++ b/simlane/templates/teams/stint_plan_partial.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load math_filters %}
 
 <!-- Stint Plan Partial for HTMX Real-time Updates -->
 <div id="stint-plan-container" class="space-y-6">
